--- a/new-index.html
+++ b/new-index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online </title>
     <link rel="stylesheet" href="new-styles.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
     <div id="main">
@@ -44,6 +45,56 @@
                     </div>
                 </div>
             </section>
+
+            <!-- style csards section -->
+             <section class="style-cards">
+                <div class="style-cards-container">
+                    <div class="style-card card-1">
+                        <div class="card-1-container">
+                            <div class="card-1-left">
+                                <div class="card-1-left-desc">
+                                    <h2>Enjoy on your TV.</h2>
+                                    <p>
+                                        Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card-1-right">
+                                <div class="card-1-right-container">
+                                    <img src="./assets/tv1.png" alt="">
+                                    <video src="./assets/video1.m4v" type="video/m4v" autoplay="" loop=""  ></video>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="style-card card-2">
+                        <div class="card-2-container">
+                            <div class="card-2-left">
+                                <div class="card-2-left-container">
+                                    <div class="card-2-outer-img">
+                                        <img src="./assets/card2Img.jpg" alt="card 2 img">
+                                    </div>
+                                    <div class="card-2-inner-img">
+                                        <img src="./assets/STimg.png" alt="stranger things image">
+                                        <p>Stranger  Things <br />
+                                            <span style="color:#36bdd9;">Downloading...</span>
+                                        </p>
+                                        <img src="./assets/download-icon.gif" alt="download gif">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-2-right">
+                                <div class="card-2-right-desc">
+                                    <h2>Download your shows to watch offline.</h2>
+                                    <p>Save your favourites easily and always have something to watch.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="style-card"></div>
+                    <div class="style-card"></div>
+                </div>
+             </section>
         </div>
     </div>
 </body>
