--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="card-1-right">
                                 <div class="card-1-right-container">
                                     <img src="./assets/tv1.png" alt="">
-                                    <video src="./assets/video1.m4v" type="video/m4v" autoplay="" loop=""  ></video>
+                                    <video src="./assets/video1.m4v" autoplay loop  ></video>
                                 </div>
                             </div>
                         </div>
