--- a/index.html
+++ b/index.html
@@ -92,7 +92,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="style-card"></div>
+                    <div class="style-card">
+                        <div class="card-3-container">
+                            <div class="card-3-left">
+                                <div class="card-3-left-desc">
+                                    <h2>Watch everywhere.</h2>
+                                    <p>
+                                        Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card-3-right">
+                                <div class="card-3-right-container">
+                                    <img src="./assets/tv2.png" alt="TV 2">
+                                    <video src="./assets/video2.m4v" autoplay loop muted ></video>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="style-card"></div>
                 </div>
              </section>
