--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./responsive.css">
     <link rel="icon" href="./assets/Netflixicon.ico" >
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add" />
 </head>
 <body>
     <div id="main">
@@ -110,10 +112,54 @@
                             </div>
                         </div>
                     </div>
-                    <div class="style-card"></div>
+                    <div class="style-card">
+                        <div class="card-4-container">
+                            <div class="card-4-left">
+                                <div class="card-4-left-container">
+                                    <div class="card-4-img">
+                                        <img src="./assets/card4Img.png" alt="card 4 img">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-4-right">
+                                <div class="card-4-right-desc">
+                                    <h2>Create profiles for children.</h2>
+                                    <p>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </section>
+             <section class="faq-section">
+                <div class="faq-container">
+                    <div class="faq-heading">
+                        <h2>Frequently Aked Questions</h2>
+                    </div>
+                    <div class="faq-body">
+                        <div class="faq-body-container">
+                            <div class="faq">
+                                <div class="question">
+                                    <p>What is Netflix?</p>
+                                    <span class="material-symbols-outlined">
+                                        add
+                                    </span>
+                                </div>
+                                <div class="answer">
+                                    <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.</p>
+                                    <br>
+                                    <p>You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
              </section>
         </div>
     </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
