--- a/index.html
+++ b/index.html
@@ -151,6 +151,19 @@
                                     <p>You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!</p>
                                 </div>
                             </div>
+                            <div class="faq">
+                                <div class="question">
+                                    <p>What is Netflix?</p>
+                                    <span class="material-symbols-outlined">
+                                        add
+                                    </span>
+                                </div>
+                                <div class="answer">
+                                    <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.</p>
+                                    <br>
+                                    <p>You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!</p>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
