--- a/index.html
+++ b/index.html
@@ -235,7 +235,37 @@
                     </div>
                     <div class="footer-nav">
                         <div class="footer-nav-container">
-                            
+                            <div class="footer-nav-1">
+                                <ul class="footer-nav-1-list">
+                                    <li><a href="#">FAQ</a></li>
+                                    <li><a href="#">Investor Relations</a></li>
+                                    <li><a href="#">Privacy</a></li>
+                                    <li><a href="#">Speed Test</a></li>
+                                </ul>
+                            </div>
+                            <div class="footer-nav-1">
+                                <ul class="footer-nav-1-list">
+                                    <li><a href="#">Help Center</a></li>
+                                    <li><a href="#">Jobs</a></li>
+                                    <li><a href="#">Cookie Preferences</a></li>
+                                    <li><a href="#">Legal Notices</a></li>
+                                </ul>
+                            </div>
+                            <div class="footer-nav-1">
+                                <ul class="footer-nav-1-list">
+                                    <li><a href="#">Accout</a></li>
+                                    <li><a href="#">Ways to Watch</a></li>
+                                    <li><a href="#">Corporate Information</a></li>
+                                    <li><a href="#">Only on Netflix</a></li>
+                                </ul>
+                            </div>
+                            <div class="footer-nav-1">
+                                <ul class="footer-nav-1-list">
+                                    <li><a href="#">Media Center</a></li>
+                                    <li><a href="#">Terms of Use</a></li>
+                                    <li><a href="#">Contact Us</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
