--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="./assets/Netflixicon.ico" >
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=translate" />
 </head>
 <body>
     <div id="main">
@@ -253,7 +254,7 @@
                             </div>
                             <div class="footer-nav-1">
                                 <ul class="footer-nav-1-list">
-                                    <li><a href="#">Accout</a></li>
+                                    <li><a href="#">Account</a></li>
                                     <li><a href="#">Ways to Watch</a></li>
                                     <li><a href="#">Corporate Information</a></li>
                                     <li><a href="#">Only on Netflix</a></li>
@@ -267,6 +268,19 @@
                                 </ul>
                             </div>
                         </div>
+                    </div>
+                    <div class="language-container">
+                        <div class="language-btn">
+                            <button class="light-btn">
+                                <span class="material-symbols-outlined">
+                                    translate
+                                </span>
+                                <p>English</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="footer-text">
+                        <p>Netflix India</p>
                     </div>
                 </div>
              </footer>
