--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix India - Watch TV Shows Online, Watch Movies Online - Dakhani Usman </title>
+    <title>Dakhani Usman's Netflix India - Watch TV Shows Online, Watch Movies Online </title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./responsive.css">
     <link rel="icon" href="./assets/Netflixicon.ico" >
